<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">CheckmeTourist</string>
    <string name="actionbar_menu">ActionBar Menu</string>
    <string name="content_description"></string>
    <string name="member_login">Login</string>
    <string name="forget_pw">forgot password?</string>
    <string name="input_email">Please enter your Email</string>
    <string name="input_password">Please enter your password</string>
    <string name="input_name">請輸入您的姓名</string>
    <string name="input_login_email">請輸入您登入的Email</string>
    <string name="setting_password">請設定您的密碼</string>
    <string name="input_password_again">請再輸入一次您的密碼</string>
    <string name="setting_sex">請設定您的性別</string>
    <string name="is_join">想加入Checkme?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">登入</string>
    <string name="or">OR</string>
    <string name="qq_login">使用騰訊QQ登入</string>
    <string name="skip">Skip</string>
    <string name="referrals">介紹人</string>
    <string name="referrals_phone">請正確輸入介紹人手機，輸入完畢請按確認鍵</string>
    <string name="invite_input_hint">ex:13016874278</string>
    <string name="ok">確認</string>
    <string name="cancel">取消</string>
    <string name="data_load">資料讀取</string>
    <string name="title">標題</string>
    <string name="message">訊息</string>
    <string name="error">錯誤</string>
    <string name="network_error">目前網路異常無法連線更新資料</string>
    <string name="attention">注意</string>
    <string name="easy_point">購物積分好簡單</string>
    <string name="scan_tips">將 QR Code 圖片對準掃瞄框即可自動掃瞄</string>
    <string name="scan_invoice">請將電子發票左邊 QR Code 對準掃瞄框</string>
    <string name="scan_qr_code">請對準發票上的QR Code</string>
    <string name="exchange_point">兌換點數</string>
    <string name="exchange_now">立即兌換</string>
    <string name="attention_use">使用注意事項</string>
    <string name="about_title">關於CheckMe</string>
    <string name="privacy_content">隱私權條款</string>
    <string name="service_content">服務條款</string>
    <string name="point_history_warnning">為減輕系統負擔，只會保留三個月內之資料，如有問題，請洽客服</string>
    <string name="point_history_warnning2">系統只會保留三個月內之資料，如有問題，請洽客服</string>
    <string name="point_enable">可用點數：</string>
    <string name="zero">0</string>
    <string name="point">點</string>
    <string name="point_sum">累計點數：</string>
    <string name="point_exchanged">已兌換點數：</string>
    <string name="input_req_email">請輸入您註冊之Email</string>
    <string name="mail_password_info">我們會發送一封密碼重設定信件給您，請收到信件後重新設定您的密碼哦!!</string>
    <string name="mail_password_reset">寄發密碼重設信</string>
    <string name="welcome_come_checkme">Welcome to CheckMe</string>
    <string name="name">姓名</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="expire_time">使用期限：</string>
    <string name="exchange_serial">兌換序號</string>
    <string name="leave_checkme">請問是否確定要離開CheckMe?</string>
    <string name="invalid_invoice">非電子發票二維條碼</string>
    <string name="sample_date">yyyy.mm.dd</string>
    <string name="sample_time">HH:MM:SS</string>
    <string name="sample_point">+000</string>
    <string name="no_submit">未上傳</string>
    <string name="invalid_mission">任務資料不正確</string>
    <string name="expire_serial">序號已過期</string>
    <string name="input_alipay_account">輸入支付寶帳號</string>
    <string name="input_again">再輸入一次確認</string>
    <string name="send">送出</string>
    <string name="buy_get_point">購物得點</string>
    <string name="about_checkme">關於Checkme</string>
    <string name="cooperative_store">合作商店</string>
    <string name="exchange">兌換</string>
    <string name="checkme_account">迷帳戶</string>
    <string name="have">共</string>
    <string name="password_error">密碼錯誤</string>
    <string name="password_length_error">密碼長度須大於6個</string>
    <string name="invite_error">邀請碼不能為空</string>
	<string name="unregister_account">未註冊帳號</string>
	<string name="repeat_regist_account">已有人註冊此帳號</string>
	<string name="invalid_e_mail_format">帳號格式錯誤</string>
	<string name="login_fail">登入失敗</string>
	<string name="get_forget_passwd_succ">您即將收到一份Checkme信件</string>
	<string name="suspended_account">您的帳號已無效</string>
</resources>