<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/list_item_option"
    android:orientation="horizontal"
    android:paddingLeft="7dp"
    android:paddingRight="7dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewPointHistoryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Gray_Black2" />

        <TextView
            android:id="@+id/textViewPointHistoryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Gray_Black2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPointHistoryPoint"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/sample_point"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Orange_Deep" />

    <TextView
        android:id="@+id/textViewPointHistoryInfo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Gray_Black2" />

    <TextView
        android:id="@+id/textViewPointHistorySubmit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/no_submit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone" />

</LinearLayout>
