<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a_app_bg_no"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_req_email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextReqedEmail"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_req_email"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/editTextReqedEmail" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mail_password_info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Gray_White2"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewSendPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_option"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/mail_password_reset"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSendPasswordSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_empty_option"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="6dp"
        android:text="@string/skip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White"
        android:textSize="16sp" />

</LinearLayout>