<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a_app_bg_no"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/welcome_come_checkme"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/n_icon_144" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_edit_text"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blue" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/Gray_Black2" />

        <EditText
            android:id="@+id/editTextMemberAddName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/a_mobile_input"
            android:ems="10"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:labelFor="@+id/editTextMemberAddName" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_edit_text"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewSendPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blue" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/Gray_Black2" >
        </View>

        <EditText
            android:id="@+id/editTextMemberAddAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/a_mobile_input"
            android:ems="10"
            android:hint="@string/input_login_email"
            android:inputType="textPersonName"
            android:labelFor="@+id/editTextMemberAddName" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_edit_text"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blue" />

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/Gray_Black2" >
        </View>

        <EditText
            android:id="@+id/editTextMemberAddPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/a_mobile_input"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:labelFor="@+id/editTextMemberAddName" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_edit_text"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Blue" />

        <View
            android:id="@+id/view4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/Gray_Black2" >
        </View>

        <EditText
            android:id="@+id/editTextMemberAddPasswordAgain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/a_mobile_input"
            android:ems="10"
            android:hint="@string/input_password_again"
            android:inputType="textPassword"
            android:labelFor="@+id/editTextMemberAddName" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_edit_text"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewMemberAddWoman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/woman" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_sex"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Gray_Black2" />

        <ImageView
            android:id="@+id/imageViewMemberAddMan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/man" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewMemberAddSkip"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/button_empty_option"
            android:gravity="center"
            android:text="@string/skip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />

        <View
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewMemberAddOK"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/button_option"
            android:gravity="center"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />
    </LinearLayout>

</LinearLayout>