<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewGiftExchangeProd"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/downloadwait" />

        <RelativeLayout
            android:id="@+id/relativeLayoutGiftExchangeEXBefore"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/White" >

            <TextView
                android:id="@+id/textViewGiftExchangeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewGiftExchangePointTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/item_point_ti"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/exchange_point"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewGiftExchangePoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textViewGiftExchangePointTitle"
                android:layout_alignTop="@+id/textViewGiftExchangePointTitle"
                android:layout_toEndOf="@+id/textViewGiftExchangePointTitle"
                android:background="@drawable/item_point_w"
                android:gravity="end|center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/message"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewGiftExchangeSubmit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_option"
                android:gravity="center"
                android:text="@string/exchange_now"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/White"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutGiftExchangeEXAfter"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/White"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textViewGiftExchangeTitleAfter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewGiftExchangeTitleAfter"
                android:layout_centerVertical="true"
                android:text="@string/expire_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView1"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/textView1"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Orange_Deep" />

            <TextView
                android:id="@+id/textViewExchangeSerial"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="21dp"
                android:background="@drawable/item_point_ti"
                android:gravity="center"
                android:text="@string/exchange_serial"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignTop="@id/textViewExchangeSerial"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/textViewExchangeSerial"
                android:background="@drawable/item_point_w"
                android:gravity="center"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Blue" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_other_d2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewGiftExchangeInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/item_gift_info"
                android:gravity="center_vertical"
                android:text="@string/attention_use"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/textViewGiftExchangeUseInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/message"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/Gray" />
        </LinearLayout>
    </LinearLayout>

    <com.openfile.checkmetourist.FlipperView
        android:id="@+id/flipperViewAlipay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Trans_Black" >
    </com.openfile.checkmetourist.FlipperView>

</RelativeLayout>