<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/background_dialog_blue"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="25dp" >

        <EditText
            android:id="@+id/editTextAlipayAccount"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/background_orange"
            android:ems="10"
            android:hint="@string/input_alipay_account"
            android:labelFor="@+id/editTextAlipayAccount"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextAlipayInputAgain"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_orange"
            android:ems="10"
            android:hint="@string/input_again"
            android:labelFor="@+id/editTextAlipayInputAgain"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewAlipayCancel"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:background="@drawable/background_purple"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <View
                android:id="@+id/viewAlipaySpace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewAlipaySend"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:background="@drawable/background_purple"
                android:gravity="center"
                android:text="@string/send"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>